# AlphaRAG-financial_research_agent

./: .env.example  .gitignore  README.md  docker-compose.yml  start.sh
backend/: alembic.ini  pyproject.toml
backend/.test_venv_ci/: pyvenv.cfg
backend/alembic/: env.py
backend/alembic/versions/: 2026_05_04_2000-0001_initial_schema.py
backend/scripts/: search.py  warmup.py
backend/src/alpharag/: __init__.py  main.py
backend/src/alpharag/api/: __init__.py  dependencies.py  sse.py
backend/src/alpharag/api/routers/: __init__.py  companies.py  filings.py  health.py  query.py
backend/src/alpharag/api/schemas/: __init__.py  common.py  filing.py  query.py
backend/src/alpharag/core/: __init__.py  config.py  errors.py  logging.py
backend/src/alpharag/db/: __init__.py  models.py  session.py
backend/src/alpharag/db/repositories/: __init__.py  chunk_repo.py  company_repo.py  filing_repo.py  ingestion_job_repo.py  query_log_repo.py  section_repo.py
backend/src/alpharag/generation/: __init__.py  citation_parser.py  prompts.py  synthesizer.py
backend/src/alpharag/ingestion/: __init__.py  chunker.py  edgar_client.py  embedder.py  parser.py  ticker_resolver.py
backend/src/alpharag/llm/: __init__.py  base.py  openai_provider.py
backend/src/alpharag/retrieval/: __init__.py  hybrid.py
backend/src/alpharag/services/: __init__.py  freshness_policy.py  ingestion_service.py  locks.py  query_service.py
backend/tests/eval/: eval_set.yaml  run_eval.py  test_eval.py
backend/tests/unit/: test_chunker.py  test_citation_parser.py  test_freshness_policy.py  test_parser.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/chat/: AssistantMessage.tsx  ChatContainer.tsx  EmptyState.tsx  (+4 more)
frontend/hooks/: useChatStream.ts
frontend/lib/: api.ts  sse.ts  types.ts
(+5 files in other folders)
